# AgentPay

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  requirements.txt  start.sh
agent_a/: coordinator.py  main.py
agent_a/tools/: escrow.py  negotiate.py  pay_evm.py  pay_sol.py  registry.py  reputation.py
agent_b/: main.py  package.json  stats.db  zk_reputation.mjs
agent_b/services/: code_explain.py  code_review.py  market_analysis.py  regex_generator.py  sentiment_analysis.py  smart_contract_audit.py  sql_generator.py  summarizer.py  translate.py  trust_report.py
agent_b_fuji/: main.py
agent_b_sol/: main.py
dashboard/: .env.local  package.json
dashboard/.next/: BUILD_ID  trace
dashboard/.next/cache/: .tsbuildinfo
dashboard/.next/server/: middleware-build-manifest.js  server-reference-manifest.js  webpack-runtime.js
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AgentCards.tsx  AgentGraph.tsx  ClientDate.tsx  JobFeed.tsx  PaymentPulse.tsx  RunDemo.tsx  TransactionTicker.tsx
dashboard/lib/: ws_server.ts
programs/agent-registry/: Cargo.toml
programs/agent-registry/src/: lib.rs
programs/escrow/: Cargo.toml
programs/escrow/src/: lib.rs
programs/staking/: Cargo.toml
programs/staking/src/: lib.rs
scripts/: anchor_client.ts  register_agents.ts  seed_reputation.ts  setup_wallets.sh  tsconfig.json
zk/private_bid/: auction.ts  bid.circom
zk/sp1_reputation/: verifier.sol
zk/sp1_reputation/script/: Cargo.toml
zk/sp1_reputation/script/src/: main.rs
zk_reputation/: package.json  zk_reputation.mjs
(+121 files in other folders)
